<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarPerfilActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#B8E092"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_backPerfil"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="boton para volver al perfil"
                app:srcCompat="?attr/actionModeCloseDrawable" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="115dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_nombre" />

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:text="@string/title_editPerfil"
            android:textColor="#3C5B27"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">


            <ImageView
                android:id="@+id/perfilImagen"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/profileImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icono_perfil" />

            <EditText
                android:id="@+id/perfilNombreCompleto"
                android:layout_width="157dp"
                android:layout_height="50dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="3dp"
                android:fontFamily="@font/roboto_bold"
                android:hint="Nombre y Apellido"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/perfilImagen"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/perfilNombreUsuario"
                android:layout_width="156dp"
                android:layout_height="50dp"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/roboto_bold"
                android:hint="nombreUsuario"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintStart_toEndOf="@+id/perfilImagen"
                app:layout_constraintTop_toBottomOf="@+id/perfilNombreCompleto"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/btnEditNombre"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="boton para editar Nombre"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icons8_pencil_24" />

            <LinearLayout
                android:id="@+id/layoutEditContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btnAceptarEditNombre"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="boton para editar Nombre"
                    android:visibility="visible"
                    app:srcCompat="@drawable/check_icon" />

                <ImageButton
                    android:id="@+id/btnCancelEditNombre"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="boton para editar Nombre"
                    android:visibility="visible"
                    app:srcCompat="@drawable/x_icon" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:padding="5sp"
            android:text="@string/title_mail"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/perfilEmail"
            android:layout_width="159dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:hint="example@mail.com"
            android:inputType="textEmailAddress"
            android:padding="5sp"
            android:textAlignment="center"
            android:textColor="#3C5B27"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="215dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:padding="5sp"
            android:text="@string/title_password"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/perfilPassword1"
            android:layout_width="215dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:hint="***********"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#3C5B27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/nuevoPass"
            android:layout_width="215dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:padding="5sp"
            android:text="@string/new_password"
            android:textColor="#000000"
            android:textSize="15sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perfilPassword1" />

        <EditText
            android:id="@+id/perfilPassword2"
            android:layout_width="215dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:hint="***********"
            android:inputType="textPassword"
            android:textColor="#3C5B27"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nuevoPass" />

        <ImageButton
            android:id="@+id/btnCambiarContraseña"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="boton para editar contraseña"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_pencil_24" />

        <LinearLayout
            android:id="@+id/nuevaPassContainer"
            android:layout_width="153dp"
            android:layout_height="62dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526">

            <ImageButton
                android:id="@+id/btnAceptarCambiarContraseña"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="boton para confirmar"
                android:visibility="visible"
                app:srcCompat="@drawable/check_icon" />

            <View
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnCancelCambiarContraseña"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="boton para cancelar"
                android:visibility="visible"
                app:srcCompat="@drawable/x_icon" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btn_eliminarCuenta"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:backgroundTint="#3C5B27"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_eliminarCuenta"
            android:textAllCaps="false"
            android:textColor="#FDFFEB"
            android:textSize="16sp"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="#B8E092"
            android:minHeight="?attr/actionBarSize"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:gravity="center"
                android:orientation="horizontal"
                android:outlineProvider="none">

                <ImageButton
                    android:id="@+id/btn_home"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:contentDescription="Home"
                    android:gravity="center"
                    app:layout_constraintBottom_toTopOf="@+id/toolbar3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/icon_home" />

                <ImageButton
                    android:id="@+id/btn_buscar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="Buscar"
                    android:tint="#002E53"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/toolbar3"
                    app:srcCompat="@drawable/icon_buscar"
                    tools:ignore="UseAppTint" />

                <ImageButton
                    android:id="@+id/btn_agregar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="Agregar Receta"
                    android:tint="#035707"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar3"
                    app:srcCompat="@drawable/icon_a_adir"
                    tools:ignore="UseAppTint" />

                <ImageButton
                    android:id="@+id/btn_suscripcion"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="Favoritos"
                    android:tint="#6A25E4"
                    app:srcCompat="@drawable/icon_carrito"
                    tools:ignore="UseAppTint" />

                <ImageButton
                    android:id="@+id/btn_perfil"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="Perfil"
                    android:tint="#7EB3DD"
                    app:srcCompat="@drawable/icon_user"
                    tools:ignore="UseAppTint" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>